--- a/src/public/styles/index.scss
+++ b/src/public/styles/index.scss
@@ -7,6 +7,10 @@
 @import 'components/button';
 @import 'themes/background';
 
+// html {
+//     font-size: 16px;
+// }
+
 body {
     background-color: $background-color;
 
