--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -2,87 +2,230 @@
 {{!-- <p>{{newsList}}</p> --}}
 
 <div class='home-page'>
-    <section class='container header-content'>
-        <div class='row'>
-            <div class='col-3'>
-                <div class='home-list bg-lightEB'>
-                    <div class='stylized__item'>
-                        <div class='stylized'>
-                            <i class='fa-solid fa-book-open-reader icon--grad'></i>
-                            <h3> Đào tạo </h3>
-                            <p class='desc'>Top 8 trường đào tạo an toàn thông
-                                tin trọng điểm cả nước</p>
+    <section class='header-content'>
+        <div class='container'>
+            <div class='row'>
+                <div class='col-3 left-side'>
+                    <div class='home-list bg--lightEB'>
+                        <div class='stylized__item'>
+                            <div class='stylized'>
+                                <i
+                                    class='fa-solid fa-book-open-reader icon--grad'
+                                ></i>
+                                <h3> Đào tạo </h3>
+                                <p class='desc'>Top 8 trường đào tạo an toàn
+                                    thông tin trọng điểm cả nước</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class='stylized__item'>
-                        <div class='stylized'>
-                            <i class='fa-solid fa-plane-departure icon--grad'></i>
-                            <h3> Học bổng </h3>
-                            <p class='desc'>Học bổng và cơ hội du học ngay từ
-                                năm nhất</p>
+                        <div class='stylized__item'>
+                            <div class='stylized'>
+                                <i
+                                    class='fa-solid fa-plane-departure icon--grad'
+                                ></i>
+                                <h3> Học bổng </h3>
+                                <p class='desc'>Học bổng và cơ hội du học ngay
+                                    từ năm nhất</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class='stylized__item'>
-                        <div class='stylized'>
-                            <i class='fa-solid fa-briefcase icon--grad'></i>
-                            <h3> Cơ hội </h3>
-                            <p class='desc'>Cơ hội việc làm cao</p>
+                        <div class='stylized__item'>
+                            <div class='stylized'>
+                                <i class='fa-solid fa-briefcase icon--grad'></i>
+                                <h3> Cơ hội </h3>
+                                <p class='desc'>Cơ hội việc làm cao</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class='stylized__item'>
-                        <div class='stylized'>
-                            <i class='fa-solid fa-hand-holding-usd icon--grad'></i>
-                            <h3> Học phí </h3>
-                            <p class='desc'>Học phí hợp lý</p>
+                        <div class='stylized__item'>
+                            <div class='stylized'>
+                                <i
+                                    class='fa-solid fa-hand-holding-usd icon--grad'
+                                ></i>
+                                <h3> Học phí </h3>
+                                <p class='desc'>Học phí hợp lý</p>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class='col-9'>
-                <div class='slider'>
-                    <img
-                        src='http://ts.actvn.edu.vn/Upload/svda/treo-tuong-web-1.jpg'
-                        alt=''
-                    />
+                <div class='col'>
+                    <div class='slider'>
+                        <img
+                            src='http://ts.actvn.edu.vn/Upload/svda/treo-tuong-web-1.jpg'
+                            alt=''
+                        />
+                    </div>
                 </div>
             </div>
         </div>
     </section>
-    <section class='container news-section mt-4'>
-        <div class='row'>
-            <div class='col-3'>
-                <div class='category bg-lightBlue'>
-                    <p>.</p>
-                </div>
-            </div>
-            <div class='col-9'>
-                <div class="title"> 
-                    <h2>Tin tuyển sinh</h2>
-                </div>
-                <div class='row'>
-                    {{#each newsList}}
-                    <div class='col-sm-6 col-lg-4'>
-                        <div class='card'>
-                            <a href='/news/{{this.slug}}'>
-                                <img
-                                    src='{{this.image}}'
-                                    class='card-img-top'
-                                    alt='...'
-                                />
-                            </a>
-                            <div class='card-body'>
-                                <a href='/news/{{this.slug}}'>
-                                    <h5 class='card-title'>{{this.name}}</h5>
-                                </a>
-                                <p class='card-text'>{{this.description}}</p>
-                                <a href='#' class='btn btn-primary'>Go somewhere</a>
-                            </div>
+    <section class='news-section'>
+        <div class='container mt-4'>
+            <div class='row'>
+                <div class='category col-3'>
+                    <div class='category-list bg--lightBlue'>
+                        <div class='category-list__heading bg--heading'>
+                            <h3 class='title'>Danh mục</h3>
+                        </div>
+                        <div class='category-list__content bg--lightBlue'>
+                            <ul class='list'>
+                                <li class='list-item'>
+                                    <a href='#' alt='' title='Giới thiệu'>Giới
+                                        thiệu</a>
+                                </li>
+                                <li class='list-item'>
+                                    <a
+                                        href='#'
+                                        alt=''
+                                        title='Thông báo tuyển sinh'
+                                    >Thông báo tuyển sinh</a>
+                                </li>
+                                <li class='list-item'>
+                                    <a
+                                        href='#'
+                                        alt=''
+                                        title='Phương thức tuyển sinh'
+                                    >Phương thức tuyển sinh</a>
+                                </li>
+                                <li class='list-item'>
+                                    <a href='#' alt='' title='Học phí'>Học phí</a>
+                                </li>
+                                <li class='list-item'>
+                                    <a href='#' alt='' title='Học bổng'>Học bổng</a>
+                                </li>
+                                <li class='list-item'>
+                                    <a
+                                        href='#'
+                                        alt=''
+                                        title='Chuyên ngành đào tạo'
+                                    >Chuyên ngành đào tạo</a>
+                                </li>
+                                <li class='list-item'>
+                                    <a href='#' alt='' title=''>Hướng dẫn đăng
+                                        ký</a>
+                                </li>
+                                <li class='list-item'>
+                                    <a href='#' alt='' title=''>Câu hỏi thường
+                                        gặp</a>
+                                </li>
+                                <li class='list-item'>
+                                    <a href='#' alt='' title=''>Tin tức-sự kiện</a>
+                                </li>
+                                <li class='list-item'>
+                                    <a href='#' alt='' title=''>Liên hệ</a>
+                                </li>
+                            </ul>
                         </div>
                     </div>
-                    {{/each}}
+                </div>
+                <div class='admission-news col'>
+                    {{! <div class='admission-news__heading'>
+                        <h3 class='title'>Tin tuyển sinh</h3>
+                    </div> }}
+                    <div class='row admission-news__content'>
+                        {{#each newsList}}
+                            <div class='col-sm-6 col-lg-4'>
+                                <div class='card'>
+                                    <a href='/news/{{this.slug}}'>
+                                        <img
+                                            src='{{this.image}}'
+                                            class='card-img-top'
+                                            alt='...'
+                                        />
+                                    </a>
+                                    <div class='card-body'>
+                                        <a href='/news/{{this.slug}}'>
+                                            <h5
+                                                class='card-title'
+                                            >{{this.name}}</h5>
+                                        </a>
+                                        <p
+                                            class='card-text'
+                                        >{{this.description}}</p>
+                                    </div>
+                                </div>
+                            </div>
+                        {{/each}}
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+    <section class=''>
+        <div class='container mt-4'>
+            <div class='admission-news__heading'>
+                <h3 class='title'>Thông báo tuyển sinh</h3>
+            </div>
+        </div>
+    </section>
+    <section class=''>
+        <div class='container mt-4'>
+            <div class='admission-news__heading'>
+                <h3 class='title'>Phương thức tuyển sinh</h3>
+            </div>
+        </div>
+    </section>
+    <section class=''>
+        <div class='container mt-4'>
+            <div class='admission-news__heading'>
+                <h3 class='title'>Chuyên ngành đào tạo</h3>
+            </div>
+        </div>
+    </section>
+    {{> banner-kma}}
+    <section class='container news-event mt-4'>
+        <div class='row'>
+            <div class='admission-news col-9'>
+                <div class='admission-news__heading'>
+                    <h3 class='title'>Tin tức - sự kiện</h3>
+                </div>
+                <div class='row admission-news__content'>
+                     {{#each newsList}}
+                            <div class='col-sm-6 col-lg-4'>
+                                <div class='card'>
+                                    <a href='/news/{{this.slug}}'>
+                                        <img
+                                            src='{{this.image}}'
+                                            class='card-img-top'
+                                            alt='...'
+                                        />
+                                    </a>
+                                    <div class='card-body'>
+                                        <a href='/news/{{this.slug}}'>
+                                            <h5
+                                                class='card-title'
+                                            >{{this.name}}</h5>
+                                        </a>
+                                        <p
+                                            class='card-text'
+                                        >{{this.description}}</p>
+                                        <a
+                                            href='#'
+                                            alt=''
+                                            title=''
+                                            class='btn btn-primary'
+                                        >Go somewhere</a>
+                                    </div>
+                                </div>
+                            </div>
+                        {{/each}}
                 </div>
             </div>
-
+            <div class='category col-3'>
+                <div class='category-list bg--lightBlue'>
+                    <div class='category-list__heading bg--heading'>
+                        <h3 class='title'>Thông báo</h3>
+                    </div>
+                    <div class='category-list__content bg--lightBlue'>
+                        
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+      <section class=''>
+        <div class='container mt-4'>
+            <div class='admission-news__heading'>
+                <h3 class='title'>Liên hệ</h3>
+            </div>
         </div>
     </section>
     {{> banner}}
