--- a/src/resources/views/partials/banner-kma.hbs
+++ b/src/resources/views/partials/banner-kma.hbs
@@ -1,3 +1,11 @@
-<div class='banner'>
-    <img class='image-header' src='http://ts.actvn.edu.vn/Upload/svda/pano-tren-1-thankyou.jpg' alt='' />
+<div class='full-banner bg--section'>
+    <div class='container'>
+        <div class='banner'>
+            <img
+                class='banner-desc'
+                src='http://ts.actvn.edu.vn/Upload/svda/pano-tren-1-thankyou.jpg'
+                alt=''
+            />
+        </div>
+    </div>
 </div>
