--- a/src/resources/views/partials/banner.hbs
+++ b/src/resources/views/partials/banner.hbs
@@ -1,3 +1,7 @@
-<div class='banner'>
-    <img class='image-header' src='/img/header.jpg' alt='' />
+<div class='full-banner bg--section'>
+    <div class='container'>
+        <div class='banner'>
+            <img class='banner-desc' src='/img/header.jpg' alt='' />
+        </div>
+    </div>
 </div>
