--- a/src/public/styles/components/_banner.scss
+++ b/src/public/styles/components/_banner.scss
@@ -1,6 +1,6 @@
 .banner {
     background-color: $background-color;
-    height: 20vh;
+    height: 15vh;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -8,16 +8,8 @@
     color: $text-color;
 
     img {
-        object-fit: contain;
+        object-fit: fill;
+        background-repeat: no-repeat;
+        background-origin: content-box;
     }
-
-    // .banner-image {
-    //     margin-top: 65px;
-    //     width: 100%;
-    //     height: 100%;
-    //     background-repeat: no-repeat;
-    //     background-origin: content-box;
-    //     background-size: contain;
-    // }
-
 }
