--- a/src/public/styles/index.css
+++ b/src/public/styles/index.css
@@ -159,8 +159,8 @@ footer button {
 }
 
 #mainNav {
-  width: 100vw;
-  height: 60px;
+  width: 100%;
+  height: 3.75rem;
   z-index: 10;
 }
 
@@ -262,23 +262,91 @@ footer button {
   width: 100%;
 }
 
-.home-page .news-section .category {
+@media only screen and (max-width: 992px) {
+  .home-page .header-content .left-side {
+    display: none;
+  }
+}
+
+.home-page .news-section .category .category-list {
+  max-height: 39rem;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  -webkit-box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+          box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.home-page .news-section .category .category-list .category-list__heading {
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  min-height: 20rem;
-  border-radius: 0.6rem;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  -webkit-box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-          box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  border-top-left-radius: 0.2rem;
+  border-top-right-radius: 0.2rem;
+}
+
+.home-page .news-section .category .category-list .category-list__heading .title {
+  margin: 0;
+  color: #fff;
+  font-size: 0.96rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  padding: 0.65rem 1.2rem;
+}
+
+.home-page .news-section .category .category-list .category-list__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  padding: 0.6rem 1.2rem;
+}
+
+.home-page .news-section .category .category-list .category-list__content .list {
+  width: 100%;
+  list-style: none;
+  padding: 0;
+}
+
+.home-page .news-section .category .category-list .category-list__content .list li > a {
+  color: #474580;
+  display: block;
+  font-size: 0.92rem;
+  font-weight: 500;
+  line-height: 1.5rem;
+  padding: 0.39rem 0;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.home-page .news-section .category .category-list .category-list__content .list li a:hover {
+  color: #6E73FA;
+}
+
+.home-page .news-section .category .category-list .category-list__content .list li a:focus {
+  color: #22a7f0;
+}
+
+.home-page .news-section .admission-news .admission-news__heading .title {
+  font-size: 1.36rem;
+  margin-bottom: 0.9rem;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+
+@media only screen and (max-width: 992px) {
+  .home-page .news-section .category {
+    display: none;
+  }
 }
 
 .banner {
   background-color: #ffffff;
-  height: 20vh;
+  height: 15vh;
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -293,8 +361,10 @@ footer button {
 }
 
 .banner img {
-  -o-object-fit: contain;
-     object-fit: contain;
+  -o-object-fit: fill;
+     object-fit: fill;
+  background-repeat: no-repeat;
+  background-origin: content-box;
 }
 
 .button-1 {
@@ -431,28 +501,32 @@ footer button {
           box-shadow: rgba(20, 70, 32, 0.2) 0 1px 0 inset;
 }
 
-.bg-dark {
+.bg--dark {
   background-color: #343a40;
 }
 
-.bg-white {
+.bg--white {
   background-color: #FFF;
 }
 
-.bg-section {
+.bg--section {
   background-color: #f1f1f1;
 }
 
-.bg-transparent {
+.bg--transparent {
   background-color: #ffffff00;
 }
 
-.bg-lightEB {
+.bg--lightEB {
   background-color: #474580;
 }
 
-.bg-lightBlue {
+.bg--lightBlue {
   background-color: #ddfafa;
+}
+
+.bg--heading {
+  background-color: #f03434;
 }
 
 body {
