--- a/src/public/styles/layout/_navbar.scss
+++ b/src/public/styles/layout/_navbar.scss
@@ -2,8 +2,8 @@
 @import '../utilities/mixins';
 
 #mainNav {
-    width: 100vw;
-    height: 60px;
+    width: 100%;
+    height: 3.75rem;
     z-index: 10;
 }
 
