--- a/src/public/styles/pages/_home.scss
+++ b/src/public/styles/pages/_home.scss
@@ -1,4 +1,5 @@
 @import '../utilities/variable';
+@import '../utilities/breakPoint';
 
 .home-page {
     .header-content {
@@ -58,16 +59,94 @@
                 width: 100%;
             }
         }
+
+        @media only screen and (max-width: $_992) {
+            .left-side {
+                display: none;
+            }
+        }
     }
 
     .news-section {
+
         .category {
-            display: flex;
-            flex-wrap: wrap;
-            min-height: 20rem;
-            border-radius: 0.6rem;
-            box-sizing: border-box;
-            box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+
+            .category-list {
+                max-height: 39rem;
+                height: fit-content;
+                box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+                box-sizing: border-box;
+
+                .category-list__heading {
+                    width: 100%;
+                    display: flex;
+                    border-top-left-radius: 0.2rem;
+                    border-top-right-radius: 0.2rem;
+
+                    .title {
+                        margin: 0;
+                        color: #fff;
+                        font-size: 0.96rem;
+                        font-weight: 700;
+                        text-transform: uppercase;
+                        padding: 0.65rem 1.2rem;
+                        // text-align: center;
+                    }
+                }
+
+                .category-list__content {
+                    display: flex;
+                    width: 100%;
+                    padding: 0.6rem 1.2rem;
+
+                    .list {
+                        width: 100%;
+                        list-style: none;
+                        padding: 0;
+
+                        li {
+                            &>a {
+                                color: $eastBay;
+                                display: block;
+                                font-size: 0.92rem;
+                                font-weight: 500;
+                                line-height: 1.5rem;
+                                padding: 0.39rem 0;
+                                overflow: hidden;
+                                white-space: nowrap;
+                                text-overflow: ellipsis;
+                            }
+
+                            a:hover {
+                                color: $blueDam;
+                            }
+
+                            a:focus {
+                                color: $blue-light;
+                            }
+                        }
+                    }
+                }
+            }
         }
+
+        .admission-news {
+            .admission-news__heading {
+                .title {
+                    font-size: 1.36rem;
+                    margin-bottom: 0.9rem;
+                    text-transform: uppercase;
+                    font-weight: 700;
+                }
+            }
+
+        }
+
+        @media only screen and (max-width: $_992) {
+            .category {
+                display: none;
+            }
+        }
+
     }
 }
