--- a/src/public/styles/pages/_home.scss
+++ b/src/public/styles/pages/_home.scss
@@ -67,7 +67,7 @@
         }
     }
 
-    .news-section {
+    .recommended-news {
 
         .category {
 
@@ -148,5 +148,70 @@
             }
         }
 
+    }
+
+    .college-admissions {}
+
+    .specialized-training {}
+
+    .infrastructure {
+        .infrastructure__content {
+            .card {
+                overflow: hidden;
+            }
+            .card-img-overlay {
+                z-index: 1;
+                &:hover ~ .card-img {
+                    transform: scale(1.1);
+                }
+            }
+
+            img {
+                transform: scale(1);
+                transition: 1s;
+                &:hover {
+                    transform: scale(1.1);
+                }
+            }
+            
+        }
+    }
+
+    .news-events {
+        .news-events__content {}
+    }
+
+    section {
+        .heading--center {
+            text-align: center;
+        }
+
+        h2 {
+            font-size: 1.8rem;
+            text-align: center;
+            color: $eastBay;
+            text-transform: uppercase;
+        }
+    }
+
+    .highlight-underline {
+        line-height: 1.4;
+        font-weight: 500;
+        margin: 1rem 0 2rem;
+        position: relative;
+        display: inline-block;
+        text-transform: uppercase;
+
+        &::after {
+            content: "";
+            bottom: -10px;
+            height: 1px;
+            width: 80%;
+            position: absolute;
+            border-bottom: 0.2rem solid #f03434;
+            left: 0;
+            right: 0;
+            margin: auto;
+        }
     }
 }
