--- a/src/resources/views/partials/nav.hbs
+++ b/src/resources/views/partials/nav.hbs
@@ -16,6 +16,7 @@
                     </ul>
                 </li>
                 <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" data-bs-toggle="dropdown" aria-expanded="false" href="/home">Tuyển sinh</a></li>
+                <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" data-bs-toggle="dropdown" aria-expanded="false" href="/home">Học phí</a></li>
                 <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" data-bs-toggle="dropdown" aria-expanded="false" href="/news">Tin tức</a></li>
                 <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" data-bs-toggle="dropdown" aria-expanded="false" href="/contact">Liên hệ</a></li>  
                 {{!-- <li class="nav-item dropdown">
