--- a/src/public/styles/index.css
+++ b/src/public/styles/index.css
@@ -249,17 +249,35 @@ footer button {
   margin-bottom: 0;
 }
 
-.home-page .header-content .slider {
-  height: 20rem;
+.home-page .header-content .swiper {
+  position: relative;
   width: 100%;
+  height: 20rem;
   border-radius: 0.6rem;
   overflow: hidden;
   -webkit-box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
           box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
-.home-page .header-content .slider > img {
+.home-page .header-content .swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  /* Center slide text vertically */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.home-page .header-content .swiper-slide img {
+  display: block;
   width: 100%;
+  height: 100%;
 }
 
 @media only screen and (max-width: 992px) {
@@ -344,6 +362,17 @@ footer button {
   }
 }
 
+.home-page .specialized-training .Sub-title {
+  font-size: 1.3rem;
+  text-transform: uppercase;
+}
+
+.home-page .specialized-training .major-list {
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+
 .home-page .infrastructure .infrastructure__content .card {
   overflow: hidden;
 }
@@ -367,6 +396,24 @@ footer button {
 .home-page .infrastructure .infrastructure__content img:hover {
   -webkit-transform: scale(1.1);
           transform: scale(1.1);
+}
+
+.home-page .news-events .announcement .announcement-list .announcement-list__heading {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  border-top-left-radius: 0.2rem;
+  border-top-right-radius: 0.2rem;
+}
+
+.home-page .news-events .announcement .announcement-list .announcement-list__heading .title {
+  margin: 0;
+  color: #fff;
+  font-size: 0.96rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  padding: 0.65rem 1.2rem;
 }
 
 .home-page section .heading--center {
@@ -609,5 +656,9 @@ section p {
 img {
   width: 100%;
   height: 100%;
+}
+
+.display-none {
+  display: none !important;
 }
 /*# sourceMappingURL=index.css.map */
