--- a/src/public/styles/pages/_home.scss
+++ b/src/public/styles/pages/_home.scss
@@ -48,16 +48,51 @@
             }
         }
 
-        .slider {
-            height: 20rem;
+        // .slider {
+        //     height: 20rem;
+        //     width: 100%;
+        //     border-radius: 0.6rem;
+        //     overflow: hidden;
+        //     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+
+        //     &>img {
+        //         width: 100%;
+        //     }
+        // }
+
+
+        .swiper {
+            position: relative;
             width: 100%;
+            height: 20rem;
             border-radius: 0.6rem;
             overflow: hidden;
             box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+        }
 
-            &>img {
-                width: 100%;
-            }
+        .swiper-slide {
+            text-align: center;
+            font-size: 18px;
+
+            /* Center slide text vertically */
+            display: -webkit-box;
+            display: -ms-flexbox;
+            display: -webkit-flex;
+            display: flex;
+            -webkit-box-pack: center;
+            -ms-flex-pack: center;
+            -webkit-justify-content: center;
+            justify-content: center;
+            -webkit-box-align: center;
+            -ms-flex-align: center;
+            -webkit-align-items: center;
+            align-items: center;
+        }
+
+        .swiper-slide img {
+            display: block;
+            width: 100%;
+            height: 100%;
         }
 
         @media only screen and (max-width: $_992) {
@@ -66,6 +101,8 @@
             }
         }
     }
+
+
 
     .recommended-news {
 
@@ -152,16 +189,31 @@
 
     .college-admissions {}
 
-    .specialized-training {}
+    .specialized-training {
+        .Sub-title {
+            font-size: 1.3rem;
+            text-transform: uppercase;
+        }
+
+        .major-list {
+            justify-content: space-evenly;
+        }
+    }
 
     .infrastructure {
         .infrastructure__content {
+
+            // .swiper {
+            //     width: 20%;
+            // }
             .card {
                 overflow: hidden;
             }
+
             .card-img-overlay {
                 z-index: 1;
-                &:hover ~ .card-img {
+
+                &:hover~.card-img {
                     transform: scale(1.1);
                 }
             }
@@ -169,16 +221,37 @@
             img {
                 transform: scale(1);
                 transition: 1s;
+
                 &:hover {
                     transform: scale(1.1);
                 }
             }
-            
+
         }
     }
 
     .news-events {
         .news-events__content {}
+
+        .announcement {
+            .announcement-list {
+                .announcement-list__heading {
+                    width: 100%;
+                    display: flex;
+                    border-top-left-radius: 0.2rem;
+                    border-top-right-radius: 0.2rem;
+
+                    .title {
+                        margin: 0;
+                        color: #fff;
+                        font-size: 0.96rem;
+                        font-weight: 700;
+                        text-transform: uppercase;
+                        padding: 0.65rem 1.2rem;
+                    }
+                }
+            }
+        }
     }
 
     section {
