--- a/src/resources/views/layouts/main.hbs
+++ b/src/resources/views/layouts/main.hbs
@@ -6,11 +6,15 @@
         <title>KMA Admissions Web</title>
         <link rel="shortcut icon" type="image/png" href="https://i.imgur.com/vvIM4AU.png"/>
         <link rel="stylesheet" href="/styles/index.css">
+        <link rel="stylesheet"href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
+        <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/>
+
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://kit.fontawesome.com/4aba22fea9.js" crossorigin="anonymous"></script>
+        <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
     </head>
     <body>
         <div class="app">
@@ -22,9 +26,3 @@
     </body>
 </html>
 
-<script type="text/javascript">
-   window.addEventListener("scroll", function(){
-       var navbar1 = document.getElementById("mainNav");
-       navbar1.classList.toggle("sticky", window.scrollY > 0);
-   })
-</script>
